--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -20,33 +20,7 @@ body {
 	margin: 0 auto;
 }
 
-.fadingText-enter {
-	opacity: 0;
-	transform: translate(1000px, 0px) scale(5.0, 5.0);
-}
-
-.fadingText-enter.fadingText-enter-active {
-	opacity: 1;
-	transform: translate(0px, 0px) scale(1.0, 1.0);
-	transition:1000ms;
-}
-
-.fadingText-leave {
-	opacity: 1;
-	transform: scale(1.0, 1.0);
-}
-
-.fadingText-leave.fadingText-leave-active {
-	opacity: 0;
-	transform: scale(0.1, 0.1);
-	transition:800ms;
-}
-
-.fadingText-appear {
-	opacity: 0;
-}
-
-.fadingText-appear.fadingText-appar-active {
-	opacity: 1;
-	transition: 800ms;
+h1 {
+	text-align: center;
+	padding: 2.5rem 0;
 }
